--- a/todoapp/src/styles/items.css
+++ b/todoapp/src/styles/items.css
@@ -2,6 +2,7 @@
     background-color: lightgrey;
     width: 100%;
     box-shadow: 1px 2px darkgrey;
+    display: flex;
 }
 
 .itemListContainer {
